--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,15 +10,14 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 find_package(Eigen3 REQUIRED)
-# find_package(Qhull PATHS "usr/local/include" REQUIRED NO_DEFAULT_PATH)
-SET(qhullDir "/home/gnardari/thirdparty/qhull-2020.2")
-INCLUDE_DIRECTORIES(${qhullDir}/src/libqhullcpp)
-INCLUDE_DIRECTORIES(${qhullDir}/src)
-LINK_DIRECTORIES(${qhullDir}/build)
 
-INCLUDE_DIRECTORIES(${qhullDir}/src/libqhullcpp)
-INCLUDE_DIRECTORIES(include include/urquhart)
+SET(qhullDir "/usr/local/")
+INCLUDE_DIRECTORIES(${qhullDir}/include/libqhullcpp)
+INCLUDE_DIRECTORIES(${qhullDir}/include/libqhull_r)
+LINK_DIRECTORIES(${qhullDir}/lib)
 SET(qhullLibs qhullcpp qhull_r)
+
+INCLUDE_DIRECTORIES(include include/urquhart)
 
 catkin_package(
    INCLUDE_DIRS
@@ -32,10 +31,13 @@ catkin_package(
    DEPENDS)
 
 add_executable(UrquhartNode
+    src/test.cpp
     src/observation.cpp  
     src/utils.cpp  
     src/descriptor.cpp  
     )
 
 target_include_directories(UrquhartNode PUBLIC include ${catkin_INCLUDE_DIRS})
-target_link_libraries(UrquhartNode PUBLIC ${catkin_LIBRARIES})
+target_link_libraries(UrquhartNode PUBLIC ${catkin_LIBRARIES} ${qhullLibs})
+SET_TARGET_PROPERTIES(UrquhartNode PROPERTIES
+ COMPILE_DEFINITIONS "qh_QHpointer")
